day2019/1/3 下一步找cookie插件

--- a/html/first.html
+++ b/html/first.html
@@ -14,8 +14,8 @@
 				<div id="headerzuo">
 					<ul>
 						<li>欢迎加入多商网</li>
-						<li>请登入</li>
-						<li>免费注册</li>
+						<li><a href="denglu.html"target="_blank">登入</a></li>
+						<li><a href="zhuce.html"target="_blank">请注册</a></li>
 					</ul>
 				</div>
 				<div id="headeryou">
