--- a/html/second.html
+++ b/html/second.html
@@ -3,7 +3,129 @@
 	<head>
 		<meta charset="UTF-8">
 		<title></title>
+		<link rel="stylesheet" type="text/css" href="../../dist/css/second.min.css"/>
+		<script src="../../jq/jquery-1.11.3.js"></script>
+		<script src="../js/second.js"></script>
 	</head>
 	<body>
+		<header>
+			<div id="box">
+				<div id="headerzuo">
+					<ul>
+						<li>欢迎加入多商网</li>
+						<li>请登入</li>
+						<li>免费注册</li>
+					</ul>
+				</div>
+				<div id="headeryou">
+					<ul>
+						<li>我的多商</li>
+						<li>进货单</li>
+						<li>我的收藏</li>
+						<li>客户服务</li>
+						<li>手机多商</li>
+					</ul>
+				</div>
+			</div>
+		</header>
+		<!---->
+		<div id="seek">
+			<div id="seekleft">
+				<img src="../img/5bfb672f46306.png" />
+			</div>
+			<div id="seekmiddle">
+				<div id="seekmiddletop">
+					<input style="border: 0px;outline:none;cursor: pointer;"type="text" name="seektext" id="seektext" value="" placeholder="搜索&nbsp:商品/品牌/店铺"/>
+					<img src="../img/5bbf180279db8.jpg"/>
+				</div>
+				<div id="seekmiddlebottom">
+					<p>热门搜索:</p>
+					<ul>
+						<li><a href="">打底衫</a></li>
+						<li><a href="">童装裙裤</a></li>
+						<li><a href="">连体裤</a></li>
+						<li><a href="">童装t恤</a></li>
+						<li><a href="">奴曼伦N...</a></li>
+						<li><a href="">t恤女</a></li>
+					</ul>
+				</div>
+			</div>
+			<div id="seekright">
+				<img src="../img/5bbf17f099a13.png" class="changjia"/><img src="../img/5bbf17f13431c.png" class="daifa"/>
+			</div>
+		</div>
+		<!--从这开始写第二页 导航-->
+		<div id="box1">
+			<ul>
+				<li><a href="">首页</a></li>
+				<li><a href="">时尚女装</a>
+					<div class="box101">
+					<ul>
+						<li>
+							<p>上衣</p>
+							<p>
+								<span><a href="">t恤</a></span>
+								<span><a href="">卫衣</a></span>
+								<span><a href="">衬衫</a></span>
+								<span><a href="">雪纺</a></span>
+							</p>
+						</li>
+						<li>
+							<p>裙子</p>
+							<p>
+								<span><a href="">连衣裙</a></span>
+								<span><a href="">半身裙</a></span>
+								<span><a href="">套装裙</a></span>
+							</p>
+						</li>
+						<li>
+							<p>针织毛衣</p>
+							<p>
+								<span><a href="">开衫</a></span>
+								<span><a href="">套头</a></span>
+								<span><a href="">毛衫外套</a></span>
+							</p>
+						</li>
+						<li>
+							<p>裤子</p>
+							<p>
+								<span><a href="">休闲裤</a></span>
+								<span><a href="">牛仔裤</a></span>
+								<span><a href="">阔腿裤</a></span>
+							</p>
+						</li>
+						<li>
+							<p>外套</p>
+							<p>
+								<span><a href="">风衣</a></span>
+								<span><a href="">呢料外套</a></span>
+								<span><a href="">羽绒服</a></span>
+								<span><a href="">棉服</a></span>
+							</p>
+						</li>
+						<li>
+							<p>特色服装</p>
+							<p>
+								<span><a href="">时尚套装</a></span>
+								<span><a href="">运动服</a></span>
+								<span><a href="">礼服</a></span>
+							</p>
+						</li>
+					</ul>
+					</div>
+				</li>
+				<li><a href="">箱包配饰</a></li>
+				<li><a href="">风情鞋靴</a></li>
+				<li><a href="">精品男装</a></li>
+				<li><a href="">美容美妆</a></li>
+				<li><a href="">母婴童装</a></li>
+				<li><a href="">性感内衣</a></li>
+				<li><a href="">数码电器</a></li>
+				<li><a href="">食品零售</a></li>
+				<li><a href="">家居日用</a></li>
+				<li><a href="">饰品配件</a></li>
+			</ul>
+		</div>
+		<h6></h6>
 	</body>
 </html>
